--- a/EmployeeList/MainWindow.xaml
+++ b/EmployeeList/MainWindow.xaml
@@ -10,6 +10,7 @@
 
     <Grid>
         <Button Content="Add Employee" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="774" Click="Button_Click"/>
-        <DataGrid x:Name="employeeDataGrid" HorizontalAlignment="Left" Height="376" Margin="10,34,0,0" VerticalAlignment="Top" Width="774" SelectionChanged="DataGrid_SelectionChanged"/>
+        <DataGrid x:Name="employeeDataGrid" HorizontalAlignment="Left" Height="354" Margin="10,56,0,0" VerticalAlignment="Top" Width="774" SelectionChanged="DataGrid_SelectionChanged"/>
+        <Button Content="Remove Employee" HorizontalAlignment="Left" Margin="10,33,0,0" VerticalAlignment="Top" Width="774" Click="Button_Click_1"/>
     </Grid>
 </Window>
